@@ -34,6 +34,7 @@
  *	@(#)mystring.h	8.2 (Berkeley) 5/4/95
  */
 
+#include <stdint.h>
 #include <string.h>
 
 extern const char snlfmt[];
@@ -47,6 +48,7 @@ extern const char homestr[];
 void scopyn(const char *, char *, int);
 #endif
 char *prefix(const char *, const char *);
+intmax_t atomax10(const char *);
 int number(const char *);
 int is_number(const char *);
 char *single_quote(const char *);
