@@ -3,6 +3,7 @@
 	* Add pushstackmark.
 	* Treat OPTIND=0 in the same way as OPTIND=1.
 	* Remove setvarsafe.
+	* Use intmax_t arithmetic in test.
 
 2007-10-05  Herbert Xu <herbert@gondor.apana.org.au>
 
